--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <div class="grid-container hidden">
     <div class="image-grid">
       <img src="media/000291650001.jpg" alt="Photo 1" class="item" data-category="dp" data-caption="Caption for Photo">
-      <img src="media/000291650002.jpg" alt="Photo 2" class="item" data-category="design" data-caption="Caption for Photo">
-      <img src="media/000291650003.jpg" alt="Photo 3" class="item" data-category="design" data-caption="Caption for Photo">
+      <img src="media/3D_Alien.gif" alt="Photo 2" class="item" data-category="design" data-caption="Caption for Photo">
+      <img src="media/CthuhlhuKid.gif" alt="Photo 3" class="item" data-category="design" data-caption="Caption for Photo">
       <img src="media/000291650004.jpg" alt="Photo 4" class="item" data-category="photo" data-caption="Caption for Photo">
       <img src="media/000291650005.jpg" alt="Photo 5" class="item" data-category="photo" data-caption="Caption for Photo">
       <img src="media/000291650006.jpg" alt="Photo 6" class="item" data-category="film" data-caption="Caption for Photo">
@@ -28,7 +28,7 @@
       <img src="media/000291650009.jpg" alt="Photo 9" class="item" data-category="film" data-caption="Caption for Photo">
       <img src="media/000291650010.jpg" alt="Photo 10" class="item" data-category="photo" data-caption="Caption for Photo">
       <img src="media/000291650011.jpg" alt="Photo 11" class="item" data-category="photo" data-caption="Caption for Photo">
-      <img src="media/000291650012.jpg" alt="Photo 12" class="item" data-category="design" data-caption="Caption for Photo">
+      <img src="media/MadBall.gif" alt="Photo 12" class="item" data-category="design" data-caption="Caption for Photo">
       <img src="media/000291650013.jpg" alt="Photo 13" class="item" data-category="dp" data-caption="Caption for Photo">
       <img src="media/000291650014.jpg" alt="Photo 14" class="item" data-category="dp" data-caption="Caption for Photo">
       <img src="media/000291650015.jpg" alt="Photo 15" class="item" data-category="photo" data-caption="Caption for Photo">
@@ -37,7 +37,7 @@
       <img src="media/000291650019.jpg" alt="Photo 18" class="item" data-category="film" data-caption="Caption for Photo">
       <img src="media/000291650020.jpg" alt="Photo 19" class="item" data-category="dp" data-caption="Caption for Photo">
       <img src="media/000291650022.jpg" alt="Photo 20" class="item" data-category="photo" data-caption="Caption for Photo">
-      <img src="media/000291650023.jpg" alt="Photo 21" class="item" data-category="design" data-caption="Caption for Photo">
+      <img src="media/XunchKid.gif" alt="Photo 21" class="item" data-category="design" data-caption="Caption for Photo">
     </div>
     <div class="about-content hidden">
       <img src="media/samwil.png" alt="About Image" class="about-image">
