--- a/index.html
+++ b/index.html
@@ -17,27 +17,108 @@
 
   <div class="grid-container hidden">
     <div class="image-grid">
-      <img src="media/000291650001.jpg" alt="Photo 1" class="item" data-category="dp" data-caption="Caption for Photo">
-      <img src="media/3D_Alien.gif" alt="Photo 2" class="item" data-category="design" data-caption="Caption for Photo">
-      <img src="media/CthuhlhuKid.gif" alt="Photo 3" class="item" data-category="design" data-caption="Caption for Photo">
-      <img src="media/000291650004.jpg" alt="Photo 4" class="item" data-category="photo" data-caption="Caption for Photo">
-      <img src="media/000291650005.jpg" alt="Photo 5" class="item" data-category="photo" data-caption="Caption for Photo">
-      <img src="media/000291650006.jpg" alt="Photo 6" class="item" data-category="film" data-caption="Caption for Photo">
-      <img src="media/000291650007.jpg" alt="Photo 7" class="item" data-category="dp" data-caption="Caption for Photo">
-      <img src="media/000291650008.jpg" alt="Photo 8" class="item" data-category="photo" data-caption="Caption for Photo">
-      <img src="media/000291650009.jpg" alt="Photo 9" class="item" data-category="film" data-caption="Caption for Photo">
-      <img src="media/000291650010.jpg" alt="Photo 10" class="item" data-category="photo" data-caption="Caption for Photo">
-      <img src="media/000291650011.jpg" alt="Photo 11" class="item" data-category="photo" data-caption="Caption for Photo">
-      <img src="media/MadBall.gif" alt="Photo 12" class="item" data-category="design" data-caption="Caption for Photo">
-      <img src="media/000291650013.jpg" alt="Photo 13" class="item" data-category="dp" data-caption="Caption for Photo">
-      <img src="media/000291650014.jpg" alt="Photo 14" class="item" data-category="dp" data-caption="Caption for Photo">
-      <img src="media/000291650015.jpg" alt="Photo 15" class="item" data-category="photo" data-caption="Caption for Photo">
-      <img src="media/000291650016.jpg" alt="Photo 16" class="item" data-category="photo" data-caption="Caption for Photo">
-      <img src="media/000291650018.jpg" alt="Photo 17" class="item" data-category="film" data-caption="Caption for Photo">
-      <img src="media/000291650019.jpg" alt="Photo 18" class="item" data-category="film" data-caption="Caption for Photo">
-      <img src="media/000291650020.jpg" alt="Photo 19" class="item" data-category="dp" data-caption="Caption for Photo">
-      <img src="media/000291650022.jpg" alt="Photo 20" class="item" data-category="photo" data-caption="Caption for Photo">
-      <img src="media/XunchKid.gif" alt="Photo 21" class="item" data-category="design" data-caption="Caption for Photo">
+      <img src="media/3D_Alien.gif" alt="Photo 2" class="item" data-category="design" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_6107.jpg" alt="Photo 33" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_1789.jpg" alt="Photo 1" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_1790.jpg" alt="Photo 2" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_1793.JPG" alt="Photo 3" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_1794.JPG" alt="Photo 4" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_1970.JPG" alt="Photo 5" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_1973.JPG" alt="Photo 6" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_2114.jpg" alt="Photo 7" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_2140.JPG" alt="Photo 8" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_2141.jpg" alt="Photo 9" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_2150 3.jpg" alt="Photo 10" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/Hannah bedroom scan-2.webp" alt="Photo 15" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">    
+      <img src="media/IMG_6111.JPG" alt="Photo 34" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_6151 2.jpg" alt="Photo 35" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_6154.jpg" alt="Photo 36" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_6317.jpg" alt="Photo 37" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_6329.JPG" alt="Photo 38" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/CthuhlhuKid.gif" alt="Photo 3" class="item" data-category="design" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_4988.jpg" alt="Photo 25" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_2300.JPG" alt="Photo 12" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_2301.JPG" alt="Photo 13" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_3917.jpg" alt="Photo 14" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_3923.JPG" alt="Photo 15" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/Hannah bedroom 3-3.webp " alt="Photo 15" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_3923(1).JPG" alt="Photo 16" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_4181.JPG" alt="Photo 17" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_4185.JPG" alt="Photo 18" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_4185(1).JPG" alt="Photo 19" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_4189.jpg" alt="Photo 20" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_4189(1).jpg" alt="Photo 21" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_4264.jpg" alt="Photo 22" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_4891.jpg" alt="Photo 23" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_4897.jpg" alt="Photo 24" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/EPSON008.jpg" alt="Photo 46" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/EPSON010.jpg" alt="Photo 47" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/64FE0E66-EE78-4B83-AA37-D25BDA43DC2F.JPG" alt="Photo 56" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/9AEAB763-1E49-419B-920F-6345EBA526EC.jpg" alt="Photo 54" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/26D943D3-CD8F-46D5-9C67-03CA131E0ECA.jpg" alt="Photo 55" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/92C79EC6-77C6-44A5-AE06-3F313E6D05AF.jpg" alt="Photo 57" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_2215.jpg" alt="Photo 11" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_9695.jpg" alt="Photo 10" class="item" data-category="design" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_5003.jpg" alt="Photo 26" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_5069.JPG" alt="Photo 27" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_5139.jpg" alt="Photo 28" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_5145.jpg" alt="Photo 29" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_5285.JPG" alt="Photo 30" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_5756.JPG" alt="Photo 31" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_5847.jpg" alt="Photo 32" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/MadBall.gif" alt="Photo 12" class="item" data-category="design" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_6802.jpg" alt="Photo 39" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_7546.jpg" alt="Photo 40" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_7551.jpg" alt="Photo 41" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_8709.jpg" alt="Photo 42" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/EPSON005.jpg" alt="Photo 44" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/EPSON007.jpg" alt="Photo 45" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_9699.jpg" alt="Photo 16" class="item" data-category="design" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/EPSON013.jpg" alt="Photo 48" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/EPSON014.jpg" alt="Photo 49" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/EPSON027.jpg" alt="Photo 50" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/FA7249EA-B6A1-4933-87D7-76D338DA346C.jpg" alt="Photo 51" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/04DD27CB-15D8-4F20-ADA7-B7BC5470BB7E.jpg" alt="Photo 52" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/31250022.JPG" alt="Photo 15" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/XunchKid.gif" alt="Photo 21" class="item" data-category="design" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/IMG_9694.jpg" alt="Photo 4" class="item" data-category="design" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/13880018.jpg" alt="Photo 1" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/000020280003.jpg" alt="Photo 2" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/31230018.jpg" alt="Photo 3" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/31230018(1).jpg" alt="Photo 4" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/31230023.JPG" alt="Photo 5" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/31230025.jpg" alt="Photo 6" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/31230025(1).jpg" alt="Photo 7" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/31240011.JPG" alt="Photo 8" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/31240014.JPG" alt="Photo 9" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy"
+      <img src="media/8BCCCF90-E261-4E54-ABBA-7B02E749B939.JPG" alt="Photo 53" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/31250004.JPG" alt="Photo 10" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/31250004(1).JPG" alt="Photo 11" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/31250005.JPG" alt="Photo 12" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/31250005(1).JPG" alt="Photo 13" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/31250017.JPG" alt="Photo 14" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/EEBDA9AC-4599-4533-A93C-BCA9EA197673.JPG" alt="Photo 43" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/31260006.jpg" alt="Photo 16" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/31260013(1).JPG" alt="Photo 18" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/31260027.jpg" alt="Photo 19" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/46570033.jpg" alt="Photo 21" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/52820009.jpg" alt="Photo 22" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/54140032.jpg" alt="Photo 23" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/54150023.jpg" alt="Photo 24" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/54150025.jpg" alt="Photo 25" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/54160024.jpg" alt="Photo 26" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/000080640003.JPG" alt="Photo 27" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/000080640017.jpg" alt="Photo 28" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/84860013.JPG" alt="Photo 29" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/000277750013.jpg.jpg" alt="Photo 30" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/000409400007.jpg" alt="Photo 31" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/000409400025.jpg" alt="Photo 32" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/000409410001.jpg" alt="Photo 33" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/000409410017.jpg" alt="Photo 34" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/A95A6BB8-08A4-49F2-9EA3-F7750A9B7DC4.JPG" alt="Photo 35" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/A95A6BB8-08A4-49F2-9EA3-F7750A9B7DC4(1).JPG" alt="Photo 36" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/Hannah scan carpet_expand.JPG" alt="Photo 37" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
+
     </div>
     <div class="about-content hidden">
       <img src="media/samwil.png" alt="About Image" class="about-image">
@@ -63,7 +144,7 @@
       <a href="https://www.instagram.com/xunch/" target="_blank">
         <img src="media/ig.png" alt="Instagram" class="about-icon">
       </a>
-      <a href="https://vimeo.com/user84084081" target="_blank">
+      <a href="https://vimeo.com/xunch" target="_blank">
         <img src="media/vimeo.png" alt="Vimeo" class="about-icon">
       </a>
       <a href="javascript:void(0);" onclick="copyEmail()">
@@ -75,3 +156,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
