--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <div class="grid-container hidden">
     <div class="image-grid">
-      <img src="media/3D_Alien.gif" alt="Photo 2" class="item" data-category="design" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/3D_Alien.gif" alt="Photo 2" class="item" data-category="design" data-caption="“Alien 1” 2023. Created on Zbrush. Inspired by the work of H.R. Giger." loading="lazy">
       <img src="media/IMG_6107.jpg" alt="Photo 33" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/IMG_1789.jpg" alt="Photo 1" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/IMG_1790.jpg" alt="Photo 2" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
@@ -35,7 +35,7 @@
       <img src="media/IMG_6154.jpg" alt="Photo 36" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/IMG_6317.jpg" alt="Photo 37" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/IMG_6329.JPG" alt="Photo 38" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
-      <img src="media/CthuhlhuKid.gif" alt="Photo 3" class="item" data-category="design" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/CthuhlhuKid.gif" alt="Photo 3" class="item" data-category="design" data-caption="“Cthulhu Kid” 2023. Created on Zbrush." loading="lazy">
       <img src="media/IMG_4988.jpg" alt="Photo 25" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/IMG_2300.JPG" alt="Photo 12" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/IMG_2301.JPG" alt="Photo 13" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
@@ -66,7 +66,7 @@
       <img src="media/IMG_5285.JPG" alt="Photo 30" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/IMG_5756.JPG" alt="Photo 31" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/IMG_5847.jpg" alt="Photo 32" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
-      <img src="media/MadBall.gif" alt="Photo 12" class="item" data-category="design" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/MadBall.gif" alt="Photo 12" class="item" data-category="design" data-caption="“MadBall” 2023. Created on Zbrush. Inspired by AmToy’s MadBall Series." loading="lazy">
       <img src="media/IMG_6802.jpg" alt="Photo 39" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/IMG_7546.jpg" alt="Photo 40" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/IMG_7551.jpg" alt="Photo 41" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
@@ -80,7 +80,7 @@
       <img src="media/FA7249EA-B6A1-4933-87D7-76D338DA346C.jpg" alt="Photo 51" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/04DD27CB-15D8-4F20-ADA7-B7BC5470BB7E.jpg" alt="Photo 52" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/31250022.JPG" alt="Photo 15" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
-      <img src="media/XunchKid.gif" alt="Photo 21" class="item" data-category="design" data-caption="Caption for Photo" loading="lazy">
+      <img src="media/XunchKid.gif" alt="Photo 21" class="item" data-category="design" data-caption="“Xunch Kid” 2021. Created on Nomad Sculpt." loading="lazy">
       <img src="media/IMG_9694.jpg" alt="Photo 4" class="item" data-category="design" data-caption="Caption for Photo" loading="lazy">
       <img src="media/13880018.jpg" alt="Photo 1" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/000020280003.jpg" alt="Photo 2" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
@@ -90,7 +90,7 @@
       <img src="media/31230025.jpg" alt="Photo 6" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/31230025(1).jpg" alt="Photo 7" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/31240011.JPG" alt="Photo 8" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
-      <img src="media/31240014.JPG" alt="Photo 9" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy"
+      <img src="media/31240014.JPG" alt="Photo 9" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/8BCCCF90-E261-4E54-ABBA-7B02E749B939.JPG" alt="Photo 53" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/31250004.JPG" alt="Photo 10" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
       <img src="media/31250004(1).JPG" alt="Photo 11" class="item" data-category="photo" data-caption="Caption for Photo" loading="lazy">
