--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#030317"/>
+  <meta name="theme-color" content="#070b14"/>
   <title>XUNCH</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="media/favicon.png" type="image/png">
