--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
       <img src="media/EPSON005.jpg" alt="Photo 57" class="item" data-category="photo" data-caption="Caption for Photo">
       <img src="media/EPSON007.jpg" alt="Photo 58" class="item" data-category="photo" data-caption="Caption for Photo">
       <img src="media/IMG_9699.jpg" alt="Photo 59" class="item" data-category="design" data-caption="Caption for Photo">
-      <img src="media/EPSON013.jpg" alt="Photo 60" class="item" data-category="photo" data-caption="Caption for Photo">
-      <img src="media/EPSON014.jpg" alt="Photo 61" class="item" data-category="photo" data-caption="Caption for Photo">
+      <img src="media/EPSON013.webp" alt="Photo 60" class="item" data-category="photo" data-caption="Caption for Photo">
+      <img src="media/EPSON014.webp" alt="Photo 61" class="item" data-category="photo" data-caption="Caption for Photo">
       <img src="media/EPSON027.jpg" alt="Photo 62" class="item" data-category="photo" data-caption="Caption for Photo">
       <img src="media/FA7249EA-B6A1-4933-87D7-76D338DA346C.jpg" alt="Photo 63" class="item" data-category="photo" data-caption="Caption for Photo">
       <img src="media/04DD27CB-15D8-4F20-ADA7-B7BC5470BB7E.jpg" alt="Photo 64" class="item" data-category="photo" data-caption="Caption for Photo">
