--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       <img src="media/IMG_2141.jpg" alt="Photo 9" class="item" data-category="photo" data-caption="Kobe in Lower Manhattan 2022">
       <img src="media/IMG_2150 3.jpg" alt="Photo 10" class="item" data-category="photo" data-caption="Friends in Barcelona, Spain">
       <img src="media/Hannah bedroom scan-2.webp" alt="Photo 11" class="item" data-category="photo" data-caption="Hannah Jadagu in East Village February 2024">    
-      <img src="media/BestDaysOfMyLife.webp" alt="Photo 12" class="item" data-category="dp" data-caption="My Friend Shawn - Best Days of My Life (Official Music Video) Cinematography"> 
+      <img src="media/BestDaysOfMyLife.webp" alt="Photo 12" class="item" data-category="dp" data-caption="My Friend Shawn - Best Days of My Life (Official Music Video) Cinematography </br> <a href='https://www.youtube.com/watch?v=gKdVcfjxXzI'>Watch Here</a>"> 
       <img src="media/IMG_6111.JPG" alt="Photo 13" class="item" data-category="photo" data-caption="Teezo Touchdown in NYC 2022">
       <img src="media/IMG_6151 2.jpg" alt="Photo 14" class="item" data-category="photo" data-caption="Hannah Jadagu at Northeastern University 2024">
       <img src="media/IMG_6154.jpg" alt="Photo 15" class="item" data-category="photo" data-caption="Hannah Jadagu at Northeastern University 2024">
       <img src="media/IMG_6317.jpg" alt="Photo 16" class="item" data-category="photo" data-caption="Hannah Jadagu at Webster Hall 2024">
-      <img src="media/LoseGIF.webp" alt="Photo 19" class="item" data-category="film" data-caption="Hannah Jadagu - Lose (Official Lyric Video)">
+      <img src="media/LoseGIF.webp" alt="Photo 19" class="item" data-category="film" data-caption="Hannah Jadagu - Lose (Official Lyric Video) </br> <a href='https://www.youtube.com/watch?v=0O37kVOlmck'>Watch Here</a>">
       <img src="media/IMG_4988.jpg" alt="Photo 18" class="item" data-category="photo" data-caption="Hannah Jadagu Press Photo Manhattan 2023">
       <img src="media/3D_Alien.webp" alt="“3D Rendering of an Alien inspired by H.R. Giger." class="item" data-category="design" data-caption="“Alien 1” 2023. Created on Zbrush. Inspired by the work of H.R. Giger.">
       <img src="media/IMG_2300.JPG" alt="Photo 20" class="item" data-category="photo" data-caption="Cascais, Portugal 2023">
@@ -54,7 +54,7 @@
       <img src="media/IMG_4897.jpg" alt="Photo 35" class="item" data-category="photo" data-caption="Hannah Jadagu Press Photo Manhattan 2023">
       <img src="media/EPSON008.jpg" alt="Photo 36" class="item" data-category="photo" data-caption="Hannah Claire 2021">
       <img src="media/EPSON010.jpg" alt="Photo 37" class="item" data-category="photo" data-caption="Kendall Raesunnie Lower Manhattan 2022">
-      <img src="media/Unveiled.webp" alt="Photo 38" class="item" data-category="dp" data-caption="Unveiled - Short Film (2024) Cinematographer">
+      <img src="media/Unveiled.webp" alt="Photo 38" class="item" data-category="dp" data-caption="Unveiled - Short Film (2024) Cinematographer </br> <a href='https://www.youtube.com/watch?v=3NPbAV_Yw5o'>Watch Here</a>">
       <img src="media/9AEAB763-1E49-419B-920F-6345EBA526EC.jpg" alt="Photo 40" class="item" data-category="photo" data-caption="Nic Going West 2021">
       <img src="media/IMG_2215.jpg" alt="Photo 43" class="item" data-category="photo" data-caption="Cascais, Portugal 2023">
       <img src="media/IMG_9695.jpg" alt="Photo 44" class="item" data-category="design" data-caption="May I Have a Cigarette? 2023">
@@ -78,15 +78,15 @@
       <img src="media/EPSON027.jpg" alt="Photo 62" class="item" data-category="photo" data-caption="My Friend Shawn Graphic 2024">
       <img src="media/31250022.webp" alt="Photo 65" class="item" data-category="photo" data-caption="Amin in Lower Manhattan 2021">
       <img src="media/XunchKid.webp" alt="Photo 66" class="item" data-category="design" data-caption="“Xunch Kid” 2021. Created on Nomad Sculpt.">
-      <img src="media/KissMeAgain.webp" alt="Photo 67" class="item" data-category="dp" data-caption="Babe City - Kiss Me Again Shot, Directed, Edited, Colored">
+      <img src="media/KissMeAgain.webp" alt="Photo 67" class="item" data-category="dp" data-caption="Babe City - Kiss Me Again Shot, Directed, Edited, Colored </br> <a href='https://www.youtube.com/watch?v=n4VxOz7faFk'>Watch Here</a>"> 
       <img src="media/IMG_9694.jpg" alt="Photo 68" class="item" data-category="design" data-caption="Old Man 2023">
       <img src="media/13880018.jpg" alt="Photo 69" class="item" data-category="photo" data-caption="Campbell in Queens 2021">
       <img src="media/000020280003.jpg" alt="Photo 70" class="item" data-category="photo" data-caption="Jah in Times Square 2021">
-      <img src="media/EnvyAdamsGIF.webp" alt="Photo 71" class="item" data-category="film" data-caption="Babe City - Envy Adams Goes Insane (Official Music Video) Co-Directed, Shot, Edited">
+      <img src="media/EnvyAdamsGIF.webp" alt="Photo 71" class="item" data-category="film" data-caption="Babe City - Envy Adams Goes Insane (Official Music Video) Co-Directed, Shot, Edited </br> Coming Soon">
       <img src="media/31230018.jpg" alt="Photo 72" class="item" data-category="photo" data-caption="Lower Manhattan With Level Three Collective 2021">
       <img src="media/31230023.webp" alt="Photo 74" class="item" data-category="photo" data-caption="Lower Manhattan With Level Three Collective 2021">
       <img src="media/31230025.jpg" alt="Photo 75" class="item" data-category="photo" data-caption="Lower Manhattan With Level Three Collective 2021">
-      <img src="media/KissMeAgain.webp" alt="Photo 107" class="item" data-category="film" data-caption="Babe City - Kiss Me Again (Official Music Video) 2024 Directed, Shot, Edited, Colored">
+      <img src="media/KissMeAgain.webp" alt="Photo 107" class="item" data-category="film" data-caption="Babe City - Kiss Me Again (Official Music Video) 2024 Directed, Shot, Edited, Colored </br> <a href='https://www.youtube.com/watch?v=n4VxOz7faFk'>Watch Here</a>">
       <img src="media/31240014.webp" alt="Photo 78" class="item" data-category="photo" data-caption="Lower Manhattan With Level Three Collective 2021">
       <img src="media/8BCCCF90-E261-4E54-ABBA-7B02E749B939.JPG" alt="Photo 79" class="item" data-category="photo" data-caption="Broken Mirror 2022">
       <img src="media/31250004.webp" alt="Photo 80" class="item" data-category="photo" data-caption="Amin in Lower Manhattan 2021">
@@ -96,7 +96,7 @@
       <img src="media/31260006.jpg" alt="Photo 86" class="item" data-category="photo" data-caption="Juliet Ivy Lower Manhattan 2021">
       <img src="media/IMG_6329.JPG" alt="Photo 87" class="item" data-category="photo" data-caption="Hannah Jadagu Webster Hall 2024">
       <img src="media/EEBDA9AC-4599-4533-A93C-BCA9EA197673.JPG" alt="Photo 85" class="item" data-category="photo" data-caption="Friends in Barcelona, Spain">
-      <img src="media/ChaseU_GIF.webp" alt="Photo 92" class="item" data-category="film" data-caption="My Friend Shawn - Chase U! (Official Music Video) Directed, Edited, Animated">
+      <img src="media/ChaseU_GIF.webp" alt="Photo 92" class="item" data-category="film" data-caption="My Friend Shawn - Chase U! (Official Music Video) Directed, Edited, Animated </br> <a href='https://www.youtube.com/watch?v=3Fpf1zEhuaM'>Watch Here</a>">
       <img src="media/52820009.jpg" alt="Photo 90" class="item" data-category="photo" data-caption="Kyla Imani 2021">
       <img src="media/54140032.jpg" alt="Photo 91" class="item" data-category="photo" data-caption="Event Photography NYC 2023">
       <img src="media/46570033.jpg" alt="Photo 89" class="item" data-category="photo" data-caption="Hannah Jadagu Press Photo Manhattan 2023">
