--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <img src="media/IMG_2140.JPG" alt="Photo 8" class="item" data-category="photo" data-caption="Kobe in Lower Manhattan 2022">
       <img src="media/IMG_2141.jpg" alt="Photo 9" class="item" data-category="photo" data-caption="Kobe in Lower Manhattan 2022">
       <img src="media/IMG_2150 3.jpg" alt="Photo 10" class="item" data-category="photo" data-caption="Friends in Barcelona, Spain">
-      <img src="media/Hannah bedroom scan-2.webp" alt="Photo 11" class="item" data-category="photo" data-caption="Hannah Jadagu in East Village February 2024">    
+      <img src="media/Hannah bedroom scan-2.png" alt="Photo 11" class="item" data-category="photo" data-caption="Hannah Jadagu in East Village February 2024">    
       <img src="media/BestDaysOfMyLife.webp" alt="Photo 12" class="item" data-category="dp" data-caption="My Friend Shawn - Best Days of My Life (Official Music Video) Cinematography </br> <a href='https://www.youtube.com/watch?v=gKdVcfjxXzI'>Watch Here</a>"> 
       <img src="media/IMG_6111.JPG" alt="Photo 13" class="item" data-category="photo" data-caption="Teezo Touchdown in NYC 2022">
       <img src="media/IMG_6151 2.jpg" alt="Photo 14" class="item" data-category="photo" data-caption="Hannah Jadagu at Northeastern University 2024">
@@ -44,7 +44,7 @@
       <img src="media/IMG_2301.JPG" alt="Photo 21" class="item" data-category="photo" data-caption="Cascais, Portugal 2023">
       <img src="media/IMG_3917.jpg" alt="Photo 22" class="item" data-category="photo" data-caption="Amin in Lower Manhattan 2021">
       <img src="media/IMG_3923.JPG" alt="Photo 23" class="item" data-category="photo" data-caption="Ant Ram in Lower Manhattan 2021">
-      <img src="media/Hannah bedroom 3-3.webp " alt="Photo 24" class="item" data-category="photo" data-caption="Hannah Jadagu in East Village February 2024">
+      <img src="media/Hannah bedroom3-3.png " alt="Photo 24" class="item" data-category="photo" data-caption="Hannah Jadagu in East Village February 2024">
       <img src="media/IMG_4181.JPG" alt="Photo 26" class="item" data-category="photo" data-caption="Friends in NYC Summer 2021 ">
       <img src="media/IMG_4185.JPG" alt="Photo 27" class="item" data-category="photo" data-caption="Central Park Summer 2021">
       <img src="media/IMG_4189.jpg" alt="Photo 29" class="item" data-category="photo" data-caption="Across the Hudson Summer 2021">
